# nextcloud-discord-bridge

./: .env.example  .gitignore  Cargo.toml  README.md  auth_test.py  flake.nix
src/: bridge.rs  main.rs
src/nextcloud/: mod.rs  signaling.rs  webrtc.rs
